[package]
name = "merge-cfg"
version = "0.1.1"
edition = "2021"
authors = ["sasakiyori <sasakiyori33@gmail.com>"]
license = "MIT"
description = "Merge or cover config based on priorities."
keywords = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
